tests/routing/gateway-api/application.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: app-1
spec:
  image: image
  port: 8081
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: app-2
spec:
  image: image
  port: 9000
