tests/routing/gateway-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gateway-api-routing
  labels:
    istio.io/rev: asm-stable
