tests/routing/gateway-api/shared-hostname-routing.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Routing
metadata:
  name: shared-api
spec:
  hostname: api.kartverket.no
  routingProvider: standard
  redirectToHTTPS: false
  routes:
    - pathPrefix: /team-a
      targetApp: app-1
      port: 8081
