tests/routing/gateway-api/shared-hostname-routing-assert.yaml
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: gateway-api-routing-shared-api-routing-ingress-ecd89812
  namespace: gateway-api-routing
spec:
  dnsNames:
    - api.kartverket.no
  issuerRef:
    kind: ClusterIssuer
    name: cluster-issuer
  secretName: gateway-api-routing-shared-api-routing-ingress-ecd89812

---
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  name: shared-api-routing-listener-37798cf1f25da647
  namespace: gateway-api-routing
spec:
  parentRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: istio-external
    namespace: istio-gateways
  listeners:
    - name: http
      hostname: api.kartverket.no
      port: 80
      protocol: HTTP
    - name: https
      hostname: api.kartverket.no
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: gateway-api-routing-shared-api-routing-ingress-ecd89812

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: shared-api-routing
  namespace: gateway-api-routing
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: shared-api-routing-listener-37798cf1f25da647
      sectionName: https
  hostnames:
    - api.kartverket.no
  rules:
    - name: app-1
      matches:
        - path:
            type: PathPrefix
            value: /team-a
      backendRefs:
        - group: ""
          kind: Service
          name: app-1
          port: 8081
          weight: 1
